hocr (0.7.0)

 * add bindings to C++, Python and Perl
 * documentation is now separate for c and cpp

 -- Yaacov Zamir <kzamir@walla.co.il>  Sun, 1 Jan 2005 22:13
 
hocr (0.6.4)

 * make memory allocation dinamic in do_ocr

 -- Yaacov Zamir <kzamir@walla.co.il>  Wed, 14 Dec 2005 22:13

hocr (0.6.1)

 * code cleanups
 * add benchmark tests for: 
   Literature, poetry (with nikud) and bible texts.

 -- Yaacov Zamir <kzamir@walla.co.il>  Wed, 14 Dec 2005 22:13
 
hocr (0.6.0)

 * can read nikud
 * add command var to the pixbuf structure

 -- Yaacov Zamir <kzamir@walla.co.il>  Tue, 13 Dec 2005 22:13
 
hocr (0.5.1)
  
  * examples now named: hocr, hocr-gtk
  * fix line equation for short lines
  * create different file for different objects
  * use a textbuffer structure
   
  -- Yaacov Zamir <kzamir@walla.co.il>  Sat, 10 Dec 2005 22:13

hocr (0.4.8)

  * Use columns
  * Ignure nikud marks
  * use non horizontal lines
  * add command to the image buffer struct to let user control ocr.
  * add none-used error to the image struct to let peogram return 
    feedback to user

  -- Yaacov Zamir <kzamir@walla.co.il> Wed, 07 Dec 2005 22:13

hocr (0.4.7)

  * Remove cpp (and hocr-qt) bindings, untill API stabilize.

  -- Yaacov Zamir <kzamir@walla.co.il> Wed, 07 Dec 2005 22:13

hocr (0.4.6)

  * Fix a bug in get/set bit functions
  * Add desktop menu entry only if hocr-gtk is made
  * Use gtk toolkit and not gnome to make example more portable
  * Rename the gui example hocr-gtk

  -- Yaacov Zamir <kzamir@walla.co.il> Mon, 21 Nov 2005 00:13
  
hocr (0.4.5a)

  * Ido Kanner reported a buffer overflow on hocr cmd line example, fixed.

  -- Yaacov Zamir <kzamir@walla.co.il> Sun, 04 Sep 2005 22:13
  
hocr (0.4.5)
  
  * Yuval Tanny: idea to make line detection more accurate
    by adding min/max line_coverage consts and a minimum
    finding logic between lines.
    
  * add a HACKING and BUGS files to set guidelines for patches in
    the future.
